2007-11-17  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtkmain.c: followed the Ruby/GLib polling method changes.
	- removed needless empty timeout.
	- removed the current thread holding.

2007-11-04  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtkmain.c (gtk_m_init): defined Gtk::InitError and used
	this for error on Gtk.init.

2007-09-08  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtkwindow.c (gwin_get_frame_dimensions): removed needless
	condition checks.
	(gwin_get_size): ditto.

2007-08-31  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* extconf.rb: removed a duplicated line.

2007-08-17  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtkaboutdialog.c (aboutdialog_s_show_about_dialog):
	suppressed a warning.

2007-08-13  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgdkcairo.c (Gdk.cairo_available?): moved from ...
	* src/lib/gtk2/base.rb: ... here.

2007-08-06  Mathieu Blondel

	* sample/misc/print.rb: A sample for Gtk::Print*.

2007-07-15  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbgdkatom.c: remove Gdk::Atom.intern_static_string.
	It's useless for ruby programs since there are no `static string'.

2007-07-14  Detlef Reichl

	* extconf.rb: Accept the srcdir includes spaces.

2007-07-13  Guillaume Cottenceau

	* src/rbgtktextmark.c: use new 2.12 symbol: gtk_text_mark_new

2007-07-13  Guillaume Cottenceau

	* src/rbgdk.c, src/rbgdkatom.c, src/rbgdkcolormap.c,
	src/rbgdkdragcontext.c, src/rbgdkdraw.c, src/rbgdkevent.c,
	src/rbgdkgc.c, src/rbgdkpango.c, src/rbgdkproperty.c,
	src/rbgdkregion.c, src/rbgdkrgb.c, src/rbgdkselection.c,
	src/rbgdkwindow.c, src/rbgdkwindowattr.c, src/rbgtkaccelgroup.c,
	src/rbgtkaccelmap.c, src/rbgtkaction.c, src/rbgtkactiongroup.c,
	src/rbgtkaspectframe.c, src/rbgtkbbox.c, src/rbgtkbox.c,
	src/rbgtkbutton.c, src/rbgtkcelllayout.c, src/rbgtkcellrenderer.c,
	src/rbgtkcellview.c, src/rbgtkcheckbutton.c,
	src/rbgtkcheckmenuitem.c, src/rbgtkcombo.c, src/rbgtkcombobox.c,
	src/rbgtkcontainer.c, src/rbgtkdialog.c, src/rbgtkdrag.c,