@@ -1,5 +1,7 @@
 2007-11-17  Kouhei Sutou  <kou@cozmixng.org>
 
+	* sample/gtk-demo/images.rb: followed more original style.
+
 	* src/rbgtkmain.c: followed the Ruby/GLib polling method changes.
 	- removed needless empty timeout.
 	- removed the current thread holding.
